// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metric Custom Transform Generator aggregates using the denominator equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_total_A>sum",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A / 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator aggregates using the denominator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_total_A>sum",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A / 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator aggregates using the numerator equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_good_A>sum",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A * 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator aggregates using the numerator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_good_A>sum",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A * 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator filters the source using the kql query 1`] = `
Object {
  "bool": Object {
    "minimum_should_match": 1,
    "should": Array [
      Object {
        "match": Object {
          "labels.groupId": "group-4",
        },
      },
    ],
  },
}
`;

exports[`Metric Custom Transform Generator returns the expected transform params for timeslices slo 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 1,
  },
  "description": "Rolled-up SLI data for SLO: irrelevant",
  "dest": Object {
    "index": ".slo-observability.sli-v1",
    "pipeline": ".slo-observability.sli.monthly",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good_A": Object {
        "aggs": Object {
          "sum": Object {
            "sum": Object {
              "field": "total",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_good_B": Object {
        "aggs": Object {
          "sum": Object {
            "sum": Object {
              "field": "processed",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total_A": Object {
        "aggs": Object {
          "sum": Object {
            "sum": Object {
              "field": "total",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_total_A>sum",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A",
          },
        },
      },
      "slo.isGoodSlice": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "goodEvents": "slo.numerator>value",
            "totalEvents": "slo.denominator>value",
          },
          "script": "params.goodEvents / params.totalEvents >= 0.95 ? 1 : 0",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_good_A>sum",
            "B": "_good_B>sum",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A - params.B",
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "2m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "my-index*",
    "query": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "match": Object {
              "labels.groupId": "group-3",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;

exports[`Metric Custom Transform Generator returns the expected transform params with every specified indicator params 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 1,
  },
  "description": "Rolled-up SLI data for SLO: irrelevant",
  "dest": Object {
    "index": ".slo-observability.sli-v1",
    "pipeline": ".slo-observability.sli.monthly",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good_A": Object {
        "aggs": Object {
          "sum": Object {
            "sum": Object {
              "field": "total",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_good_B": Object {
        "aggs": Object {
          "sum": Object {
            "sum": Object {
              "field": "processed",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total_A": Object {
        "aggs": Object {
          "sum": Object {
            "sum": Object {
              "field": "total",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_total_A>sum",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A",
          },
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_good_A>sum",
            "B": "_good_B>sum",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A - params.B",
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "1m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "my-index*",
    "query": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "match": Object {
              "labels.groupId": "group-3",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;
